--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -25,130 +26,4 @@ a {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Ubuntu',sans-serif;
     color: var(--title-color);
-}
-
-#page-home {
-    background: url(../assets/home-background.svg) no-repeat;
-    background-position: 35vw bottom;
-    height: 100vh;
-}
-
-#page-home .content {
-    margin: 0 auto;
-    max-width: 1100px;
-    width: 90%;
-    height: 100%;
-       
-    display: flex;
-    flex-direction: column;
-    
-}
-
-#page-home header {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#page-home header a {
-    display: flex;
-    color: var(--title-color);
-    font-weight: 700;
-}
-
-#page-home header a span {
-    background-image: url(../assets/log-in.svg);
-    display: flex;
-    margin-right: 10px;
-
-    width: 20px;
-    height: 20px;
-}
-
-#page-home main {
-    max-width: 560px;
-    flex-grow: 1;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#page-home main h1 {
-    font-size: 54px;
-    
-}
-
-#page-home main p {
-    font-size: 24px;
-    line-height: 38px;
-    margin-top: 24px;
-}
-
-#page-home main a {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 72px;
-    max-width: 360px;
-
-    border-radius: 10px;
-
-    background: var(--primary-color);
-    margin-top: 40px;
-    transition: 400ms;   
-}
-
-#page-home main a:hover {
-    background-color: var(--primary-color-dark);
-}
-
-#page-home main a span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 72px;
-    height: 72px;
-
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background-color: rgba(0,0,0,0.07);
-}
-
-#page-home main a span::after {
-    content: "";
-    background-image: url(../assets/search.svg);
-
-    width: 20px;
-    height: 20px;
-}
-
-#page-home main a strong {
-    flex: 1;
-    color: whitesmoke;
-    text-align: center;
-}
-
-@media (max-width:900px) {
-    #page-home {
-        background-position: 70vw;
-    }
-
-    #page-home .content {
-        align-items: center;
-        text-align: center;
-    }
-
-    #page-home header a {
-        position: absolute;
-        bottom: 48px;
-
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    #page-home main {
-        align-items: center;
-    }
 }
